<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DailyActivityFragment">

    <TextView
        android:id="@+id/pageTitle"
        style="@style/Theme.Kuring.Title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/xl3"
        android:text="@string/title_aktifitas_teman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/pageScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/xl3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleActivity"
                style="@style/Theme.Kuring.TitleSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_aktifitas"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/xl3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnAddActivity"
                style="@style/Theme.Kuring.TextCardDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_aktifitas"
                android:textColor="@color/purple"
                android:clickable="true"
                android:layout_marginEnd="@dimen/xl3"
                app:layout_constraintBottom_toBottomOf="@id/titleActivity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/titleActivity" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recyclerContainer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleActivity">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/activityRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/xl3"
                    android:clipToPadding="false"
                    android:scrollbarStyle="outsideOverlay"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="312dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titleFriend"
                style="@style/Theme.Kuring.TitleSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_teman"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/xl3"
                android:layout_marginTop="@dimen/xl5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerContainer1" />

            <TextView
                android:id="@+id/btnAddFriend"
                style="@style/Theme.Kuring.TextCardDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/xl3"
                android:clickable="true"
                android:text="@string/add_teman"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="@+id/titleFriend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleFriend" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friendRecycler"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/base"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:scrollbars="horizontal"
                android:orientation="horizontal"
                android:paddingStart="@dimen/xl3"
                android:paddingEnd="8dp"
                android:scrollbarSize="0dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/titleFriend"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>